--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-tween-one": "^3.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.2",
     "sort-by": "^1.2.0"
