--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "firebase": "^12.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "rc-banner-anim": "^2.4.5",
@@ -17,8 +21,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.2",
+    "react-to-print": "^3.1.1",
+    "recharts": "^3.1.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
