--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^3.1.1",
     "recharts": "^3.1.2",
     "sort-by": "^1.2.0"
